Creating GET req

--- a/index.html
+++ b/index.html
@@ -31,13 +31,21 @@
             $("#send").click(() => {
                  addMessages({name: 'Fahim', message:'hello'})
             })
-           
+            
+            getMessages()
         })
 
         function addMessages(message){
             $("#messages").append(`<h4> ${message.name} </h4> <p> ${message.message}</p>`)
         }
 
+
+
+        function getMessages(){
+            $.get('http://localhost:3000/messages', (data) => {
+                data.forEach(addMessages);
+            })
+        }
 
 
 
